# asteroids

./: CMakeLists.txt  asteroid.cpp  asteroid.h  common.h  controller.cpp  controller.h  main.cpp  makefile  model.cpp  model.h  objects.cpp  objects.h  player.h  readme.md  utils.cpp  utils.h  view.h
src/: common.h  main.cpp  utils.cpp  utils.h
src/components/: controller.cpp  controller.h  model.cpp  model.h  view.cpp  view.h
src/objects/: asteroid.cpp  asteroid.h  entity.cpp  entity.h  objects.cpp  objects.h  player.cpp  player.h
src/textures/: medium_asteroid.png~  small_asteroid.png~
